# retinal-segmentation

./: .gitignore  LICENSE  README.md  preprocess.py  pyproject.toml  retina_training.ipynb
TransUNet/: config_retina.json  legacy_synapse_viewer.py  test_retina.py  train_retina.py  trainer_retina.py
TransUNet/datasets/: dataset_retina.py
TransUNet/networks/: vit_seg_configs.py  vit_seg_modeling.py
TransUNet/retina_utils/: __init__.py  test_single_image.py
utils/: img_show.py  preprocess.py
